[metadata]
name = beaker
version = 0.1.0
description = Flask Boilerplate
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/alexrudy/beaker
author = Alex Rudy
author_email = opensource@alexrudy.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir=
    =src
packages = find:
install_requires =
    Click
    flask
    flask-sqlalchemy
    flask-logging-helpers
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = sql/*.sql

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/beaker/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120
ignore = E203,W503


[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
ignore = ['setup.py']
addopts =
    --color=yes
    --cov=src/beaker
log_level = NOTSET

[coverage:run]
concurrency = multiprocessing
source = src/
parallel = True

[coverage:report]
exclude_lines =
    pragma: nocover
    raise AssertionError
    raise NotImplementedError
    if 0:
    if TYPE_CHECKING:
    if __name__ == .__main__.:
    except BaseException:
